@@ -1,4 +1,5 @@
 2.0.4 (2022-??-??)
+    - fixed extensions advertised on the legacy TLS port
     - fixed race when releasing messages from jail
     - fixed config validation failures on hostnames with `-`
 
